HelloUltraviolet/Fixtures/RejectedSource/Comptime/ComptimeProhibitedWait/Expected.uv
//! Expected diagnostic metadata for the ComptimeProhibitedWait rejected-source specimen.

expectedDiagnostic("E-CTE-0020", "requirement.22.CompileTimeProhibitedConstructs")
